gen/ToorlaParser.java
// Generated from /home/hosna/IdeaProjects/ph1/grammar/Toorla.g4 by ANTLR 4.7.2

    import toorla.ast.*;
    import toorla.ast.declaration.*;
    import toorla.ast.declaration.classDecs.*;
    import toorla.ast.declaration.classDecs.classMembersDecs.*;
    import toorla.ast.declaration.localVarDecs.*;
    import toorla.ast.expression.*;
    import toorla.ast.expression.binaryExpression.*;
    import toorla.ast.expression.unaryExpression.*;
    import toorla.ast.expression.value.*;
    import toorla.ast.statement.*;
    import toorla.ast.statement.localVarStats.*;
    import toorla.ast.statement.returnStatement.*;
    import toorla.types.*;
    import toorla.types.arrayType.*;
    import toorla.types.singleType.*;



import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ToorlaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BEGIN=1, END=2, INHERIT=3, FUNCTION=4, FIELD=5, SELF=6, TRUE=7, FALSE=8, 
		ELSE=9, ELIF=10, NEW=11, RETURN=12, RETURNS=13, BOOL=14, STRING=15, INT=16, 
		VAR=17, CLASS=18, MAINCLASS=19, IF=20, WHILE=21, BREAK=22, CONTINUE=23, 
		PRINT=24, PUBLIC=25, PRIVATE=26, PLUS=27, MINUSNEG=28, MULT=29, DIV=30, 
		MOD=31, EQUAL=32, NEQUAL=33, LT=34, GT=35, AND=36, OR=37, NOT=38, ASSIGN=39, 
		COMMENT=40, LINECOMMENT=41, WS=42, SEMICOLON=43, INC=44, DEC=45, COLON=46, 
		COMMA=47, DOT=48, STRTOKEN=49, RPARAN=50, LPARAN=51, RBRACKET=52, LBRACKET=53, 
		NUMBER=54, ID=55;
	public static final int
		RULE_program = 0, RULE_classType = 1, RULE_entryClass = 2, RULE_classBody = 3, 
		RULE_method = 4, RULE_accessModifier = 5, RULE_typpe = 6, RULE_argument = 7, 
		RULE_multiArgs = 8, RULE_funcArray = 9, RULE_blockBody = 10, RULE_fieldStmt = 11, 
		RULE_fieldVars = 12, RULE_statement = 13, RULE_varDef = 14, RULE_assignment = 15, 
		RULE_instantiation = 16, RULE_multiVar = 17, RULE_whileLoop = 18, RULE_whileBody = 19, 
		RULE_ifExp = 20, RULE_ifWithoutElse = 21, RULE_ifBody = 22, RULE_elifStmt = 23, 
		RULE_elseStmt = 24, RULE_completeIf = 25, RULE_returnFunc = 26, RULE_block = 27, 
		RULE_printFunc = 28, RULE_incDecStmt = 29, RULE_halt = 30, RULE_singleStatement = 31, 
		RULE_expression = 32, RULE_andExp = 33, RULE_equalExp = 34, RULE_compareExp = 35, 
		RULE_addExp = 36, RULE_multExp = 37, RULE_unaryExp = 38, RULE_callExp = 39, 
		RULE_newExp = 40, RULE_array = 41, RULE_methodCall = 42, RULE_otherCall = 43, 
		RULE_methodTempCall = 44, RULE_argCall = 45, RULE_singleCall = 46, RULE_funcCall = 47, 
		RULE_arrayElement = 48, RULE_paranExp = 49;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "classType", "entryClass", "classBody", "method", "accessModifier", 
			"typpe", "argument", "multiArgs", "funcArray", "blockBody", "fieldStmt", 
			"fieldVars", "statement", "varDef", "assignment", "instantiation", "multiVar", 
			"whileLoop", "whileBody", "ifExp", "ifWithoutElse", "ifBody", "elifStmt", 
			"elseStmt", "completeIf", "returnFunc", "block", "printFunc", "incDecStmt", 
			"halt", "singleStatement", "expression", "andExp", "equalExp", "compareExp", 
			"addExp", "multExp", "unaryExp", "callExp", "newExp", "array", "methodCall", 
			"otherCall", "methodTempCall", "argCall", "singleCall", "funcCall", "arrayElement", 
			"paranExp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'begin'", "'end'", "'inherits'", "'function'", "'field'", "'self'", 
			"'true'", "'false'", "'else'", "'elif'", "'new'", "'return'", "'returns'", 
			"'bool'", "'string'", "'int'", "'var'", "'class'", "'entry class'", "'if'", 
			"'while'", "'break'", "'continue'", "'print'", "'public'", "'private'", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'<>'", "'<'", "'>'", "'&&'", 
			"'||'", "'!'", "'='", null, null, null, "';'", "'++'", "'--'", "':'", 
			"','", "'.'", null, "'('", "')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BEGIN", "END", "INHERIT", "FUNCTION", "FIELD", "SELF", "TRUE", 
			"FALSE", "ELSE", "ELIF", "NEW", "RETURN", "RETURNS", "BOOL", "STRING", 
			"INT", "VAR", "CLASS", "MAINCLASS", "IF", "WHILE", "BREAK", "CONTINUE", 
			"PRINT", "PUBLIC", "PRIVATE", "PLUS", "MINUSNEG", "MULT", "DIV", "MOD", 
			"EQUAL", "NEQUAL", "LT", "GT", "AND", "OR", "NOT", "ASSIGN", "COMMENT", 
			"LINECOMMENT", "WS", "SEMICOLON", "INC", "DEC", "COLON", "COMMA", "DOT", 
			"STRTOKEN", "RPARAN", "LPARAN", "RBRACKET", "LBRACKET", "NUMBER", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Toorla.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ToorlaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program mProgram;
		public ClassTypeContext c1;
		public EntryClassContext e;
		public ClassTypeContext c2;
		public TerminalNode EOF() { return getToken(ToorlaParser.EOF, 0); }
		public EntryClassContext entryClass() {
			return getRuleContext(EntryClassContext.class,0);
		}
		public List<ClassTypeContext> classType() {
			return getRuleContexts(ClassTypeContext.class);
		}
		public ClassTypeContext classType(int i) {
			return getRuleContext(ClassTypeContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToorlaListener ) ((ToorlaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToorlaListener ) ((ToorlaListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ToorlaVisitor ) return ((ToorlaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((ProgramContext)_localctx).mProgram =  new Program();
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(101);
				((ProgramContext)_localctx).c1 = classType();
				_localctx.mProgram.addClass(((ProgramContext)_localctx).c1.value);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			{
			setState(109);
			((ProgramContext)_localctx).e = entryClass();
			_localctx.mProgram.addClass(((ProgramContext)_localctx).e.value);
			}
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(112);
				((ProgramContext)_localctx).c2 = classType();
				_localctx.mProgram.addClass(((ProgramContext)_localctx).c2.value);
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassTypeContext extends ParserRuleContext {
		public ClassDeclaration value;
		public String name;
		public String parName = "";
		public Identifier iD;
		public Identifier parenID;
		public int line;
		public int pos;
		public Token c;
		public Token className;
		public Token parentName;
		public ClassBodyContext cb;
		public TerminalNode COLON() { return getToken(ToorlaParser.COLON, 0); }
		public TerminalNode END() { return getToken(ToorlaParser.END, 0); }
		public TerminalNode CLASS() { return getToken(ToorlaParser.CLASS, 0); }
		public List<TerminalNode> ID() { return getTokens(ToorlaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ToorlaParser.ID, i);
		}
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public TerminalNode INHERIT() { return getToken(ToorlaParser.INHERIT, 0); }
		public ClassTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToorlaListener ) ((ToorlaListener)listener).enterClassType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToorlaListener ) ((ToorlaListener)listener).exitClassType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ToorlaVisitor ) return ((ToorlaVisitor<? extends T>)visitor).visitClassType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassTypeContext classType() throws RecognitionException {
		ClassTypeContext _localctx = new ClassTypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			((ClassTypeContext)_localctx).c = match(CLASS);
			((ClassTypeContext)_localctx).line =  (((ClassTypeContext)_localctx).c!=null?((ClassTypeContext)_localctx).c.getLine():0); ((ClassTypeContext)_localctx).pos =  (((ClassTypeContext)_localctx).c!=null?((ClassTypeContext)_localctx).c.getCharPositionInLine():0);
			setState(124);
			((ClassTypeContext)_localctx).className = match(ID);

			         ((ClassTypeContext)_localctx).name =  ((ClassTypeContext)_localctx).className.getText();
			         ((ClassTypeContext)_localctx).iD =  new Identifier(_localctx.name);
			         _localctx.iD.line = (((ClassTypeContext)_localctx).className!=null?((ClassTypeContext)_localctx).className.getLine():0);
			         _localctx.iD.col = (((ClassTypeContext)_localctx).className!=null?((ClassTypeContext)_localctx).className.getCharPositionInLine():0);
			        
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INHERIT) {
				{
				setState(126);
				match(INHERIT);
				setState(127);
				((ClassTypeContext)_localctx).parentName = match(ID);

				         ((ClassTypeContext)_localctx).parName =  ((ClassTypeContext)_localctx).parentName.getText();
				         ((ClassTypeContext)_localctx).parenID =  new Identifier(_localctx.parName);
				         _localctx.parenID.line = (((ClassTypeContext)_localctx).parentName!=null?((ClassTypeContext)_localctx).parentName.getLine():0);
				         _localctx.parenID.col = (((ClassTypeContext)_localctx).parentName!=null?((ClassTypeContext)_localctx).parentName.getCharPositionInLine():0);
				        
				}
			}


			          if(_localctx.parName == "")
			            ((ClassTypeContext)_localctx).value =  new ClassDeclaration(_localctx.iD,new Identifier(null));
			          else
			            ((ClassTypeContext)_localctx).value =  new ClassDeclaration(_localctx.iD,_localctx.parenID);
			        
			setState(132);
			match(COLON);
			setState(133);
			((ClassTypeContext)_localctx).cb = classBody(_localctx.value);
			((ClassTypeContext)_localctx).value =  ((ClassTypeContext)_localctx).cb.value;
			setState(135);
			match(END);
			_localctx.value.line = _localctx.line; _localctx.value.col = _localctx.pos;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntryClassContext extends ParserRuleContext {
		public ClassDeclaration value;
		public String name;
		public String parName = "";
		public Identifier iD;
		public Identifier parenID;
		public int line;
		public int pos;
		public Token m;
		public Token className;
		public Token parentName;
		public ClassBodyContext cb;
		public TerminalNode COLON() { return getToken(ToorlaParser.COLON, 0); }
		public TerminalNode END() { return getToken(ToorlaParser.END, 0); }
		public TerminalNode MAINCLASS() { return getToken(ToorlaParser.MAINCLASS, 0); }
		public List<TerminalNode> ID() { return getTokens(ToorlaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ToorlaParser.ID, i);
		}
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public TerminalNode INHERIT() { return getToken(ToorlaParser.INHERIT, 0); }
		public EntryClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entryClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToorlaListener ) ((ToorlaListener)listener).enterEntryClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToorlaListener ) ((ToorlaListener)listener).exitEntryClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ToorlaVisitor ) return ((ToorlaVisitor<? extends T>)visitor).visitEntryClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntryClassContext entryClass() throws RecognitionException {
		EntryClassContext _localctx = new EntryClassContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_entryClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			((EntryClassContext)_localctx).m = match(MAINCLASS);
			((EntryClassContext)_localctx).line =  (((EntryClassContext)_localctx).m!=null?((EntryClassContext)_localctx).m.getLine():0); ((EntryClassContext)_localctx).pos =  (((EntryClassContext)_localctx).m!=null?((EntryClassContext)_localctx).m.getCharPositionInLine():0);
			setState(140);
			((EntryClassContext)_localctx).className = match(ID);

			         ((EntryClassContext)_localctx).name =  ((EntryClassContext)_localctx).className.getText();
			         ((EntryClassContext)_localctx).iD =  new Identifier(_localctx.name);
			         _localctx.iD.line = (((EntryClassContext)_localctx).className!=null?((EntryClassContext)_localctx).className.getLine():0);
			         _localctx.iD.col = (((EntryClassContext)_localctx).className!=null?((EntryClassContext)_localctx).className.getCharPositionInLine():0);
			        
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INHERIT) {
				{
				setState(142);
				match(INHERIT);
				setState(143);
				((EntryClassContext)_localctx).parentName = match(ID);

				         ((EntryClassContext)_localctx).parName =  ((EntryClassContext)_localctx).parentName.getText();
				         ((EntryClassContext)_localctx).parenID =  new Identifier(_localctx.parName);
				         _localctx.parenID.line = (((EntryClassContext)_localctx).parentName!=null?((EntryClassContext)_localctx).parentName.getLine():0);
				         _localctx.parenID.col = (((EntryClassContext)_localctx).parentName!=null?((EntryClassContext)_localctx).parentName.getCharPositionInLine():0);
				        
				}
			}


			          if(_localctx.parName == "")
			            ((EntryClassContext)_localctx).value =  new EntryClassDeclaration(_localctx.iD,new Identifier(null));
			          else
			            ((EntryClassContext)_localctx).value =  new EntryClassDeclaration(_localctx.iD,_localctx.parenID);
			        
			setState(148);
			match(COLON);
			setState(149);
			((EntryClassContext)_localctx).cb = classBody(_localctx.value);
			((EntryClassContext)_localctx).value =  ((EntryClassContext)_localctx).cb.value;
			setState(151);
			match(END);
			_localctx.value.line = _localctx.line; _localctx.value.col = _localctx.pos;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassBodyContext extends ParserRuleContext {
		public ClassDeclaration classs;
		public ClassDeclaration value;
		public MethodContext m;
		public FieldStmtContext f;
		public List<MethodContext> method() {
			return getRuleContexts(MethodContext.class);
		}
		public MethodContext method(int i) {
			return getRuleContext(MethodContext.class,i);
		}
		public List<FieldStmtContext> fieldStmt() {
			return getRuleContexts(FieldStmtContext.class);
		}
		public FieldStmtContext fieldStmt(int i) {
			return getRuleContext(FieldStmtContext.class,i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ClassBodyContext(ParserRuleContext parent, int invokingState, ClassDeclaration classs) {
			super(parent, invokingState);
			this.classs = classs;
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToorlaListener ) ((ToorlaListener)listener).enterClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToorlaListener ) ((ToorlaListener)listener).exitClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ToorlaVisitor ) return ((ToorlaVisitor<? extends T>)visitor).visitClassBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassBodyContext classBody(ClassDeclaration classs) throws RecognitionException {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState(), classs);
		enterRule(_localctx, 6, RULE_classBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCTION) | (1L << FIELD) | (1L << PUBLIC) | (1L << PRIVATE))) != 0)) {
				{
				setState(160);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(154);
					((ClassBodyContext)_localctx).m = method();
					_localctx.classs.addMethodDeclaration(((ClassBodyContext)_localctx).m.value);
					}
					break;
				case 2:
					{
					setState(157);
					((ClassBodyContext)_localctx).f = fieldStmt();
					_localctx.classs.addFieldsDeclarations(((ClassBodyContext)_localctx).f.value);
					}
					break;
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 ((ClassBodyContext)_localctx).value =  _localctx.classs;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public MethodDeclaration value;
		public int i;
		public String accessmodifier = "public";
		public Identifier name;
		public Type returnType;
		public List<Statement> body;
		public int line;
		public int pos;
		public AccessModifierContext am;
		public Token ff;
		public Token ii;
		public ArgumentContext a;
		public TyppeContext t;
		public FuncArrayContext f;
		public BlockBodyContext b;
		public TerminalNode RPARAN() { return getToken(ToorlaParser.RPARAN, 0); }
		public TerminalNode LPARAN() { return getToken(ToorlaParser.LPARAN, 0); }
		public TerminalNode RETURNS() { return getToken(ToorlaParser.RETURNS, 0); }
		public TerminalNode COLON() { return getToken(ToorlaParser.COLON, 0); }
		public TerminalNode END() { return getToken(ToorlaParser.END, 0); }
		public TerminalNode FUNCTION() { return getToken(ToorlaParser.FUNCTION, 0); }
		public TerminalNode ID() { return getToken(ToorlaParser.ID, 0); }
		public BlockBodyContext blockBody() {
			return getRuleContext(BlockBodyContext.class,0);
		}
		public AccessModifierContext accessModifier() {
			return getRuleContext(AccessModifierContext.class,0);
		}
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public TyppeContext typpe() {
			return getRuleContext(TyppeContext.class,0);
		}
		public FuncArrayContext funcArray() {
			return getRuleContext(FuncArrayContext.class,0);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ToorlaListener ) ((ToorlaListener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ToorlaListener ) ((ToorlaListener)listener).exitMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ToorlaVisitor ) return ((ToorlaVisitor<? extends T>)visitor).visitMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PUBLIC || _la==PRIVATE) {
				{
				setState(167);
				((MethodContext)_localctx).am = accessModifier();
				((MethodContext)_localctx).accessmodifier =  ((MethodContext)_localctx).am.name;
				}
			}

			setState(172);
			((MethodContext)_localctx).ff = match(FUNCTION);
			((MethodContext)_localctx).line =  (((MethodContext)_localctx).ff!=null?((MethodContext)_localctx).ff.getLine():0); ((MethodContext)_localctx).pos =  (((MethodContext)_localctx).ff!=null?((MethodContext)_localctx).ff.getCharPositionInLine():0);
			setState(174);
			((MethodContext)_localctx).ii = match(ID);

			         ((MethodContext)_localctx).name =  new Identifier((((MethodContext)_localctx).ii!=null?((MethodContext)_localctx).ii.getText():null));
			         _localctx.name.line = (((MethodContext)_localctx).ii!=null?((MethodContext)_localctx).ii.getLine():0);
			         _localctx.name.col = (((MethodContext)_localctx).ii!=null?((MethodContext)_localctx).ii.getCharPositionInLine():0);
			        
			setState(176);
			match(RPARAN);
			 ((MethodContext)_localctx).value =  new MethodDeclaration(_localctx.name);
			          _localctx.value.line = _localctx.line;
			          _localctx.value.col = _localctx.pos;
			          if(_localctx.accessmodifier.equals("private"))
			            _localctx.value.setAccessModifier(AccessModifier.ACCESS_MODIFIER_PRIVATE);
			        
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(178);
				((MethodContext)_localctx).a = argument(_localctx.value);
				((MethodContext)_localctx).value =  ((MethodContext)_localctx).a.value;
				}
			}

			setState(183);
			match(LPARAN);
			setState(184);
			match(RETURNS);
			{
			setState(191);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(185);
				((MethodContext)_localctx).t = typpe();
				((MethodContext)_localctx).returnType =  ((MethodContext)_localctx).t.type;
				}
				break;
			case 2:
				{
				setState(188);
				((MethodContext)_localctx).f = funcArray();
				((MethodContext)_localctx).returnType =  new ArrayType(((MethodContext)_localctx).f.type);
				}
				break;
			}
			 _localctx.value.setReturnType(_localctx.returnType);
			}
			setState(195);
			match(COLON);
			setState(196);
			((MethodContext)_localctx).b = blockBody();
			((MethodContext)_localctx).body =  ((MethodContext)_localctx).b.value;
			        for ( ((MethodContext)_localctx).i =  0 ; _localctx.i< _localctx.body.size() ; _localctx.i++)
			            _localctx.value.addStatement( _localctx.body.get(_localctx.i));
			        
			setState(198);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
